--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "type": "module",
   "description": "to do API",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sequelize": "^6.35.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
